fix image stretch in slides and add code ipynb to directly save fig

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -19,6 +19,7 @@
 \usepackage{scalefnt}
 \usepackage{ragged2e}
 \usepackage{graphics}
+\usepackage[export]{adjustbox} % aligns figures
 \usepackage{bbm}
 \usepackage{graphicx}
 \usepackage{mathrsfs}
@@ -705,6 +706,12 @@ Optimizacion de configuraciones de hiperparametros $\mathcal{A}$ via estimacion 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}{Comparacion de Fronteras de Decision}
+		\includegraphics[width = 0.9 \paperwidth, height = 0.7 \paperheight, 
+										trim = 0.2 0.2 0.2 0.2cm, left, clip = true]{slides/plot_classifier_comparison.png}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Definición de problemas de migracion A}
 
